<resources>
    <string name="app_name">hotelhi</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_button">Login</string>
    <string name="register_link">Register?</string>
    <string name="login_title">Login</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="country_hint">Country</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="register_button">Register</string>
    <string name="home_image_string">icons8_register_50__1_</string>
    <string name="country_spinner_description">Country</string>
    <string name="cancel_button">Cancel</string>
    <string name="no_account">Dont have an account?</string>
    <string name="has_account">I have an account</string>
    <string name="bookings_title">My Bookings</string>
    <string name="home_title">Let the adventure Begins!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">logout</string>
</resources>