<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/editTextStyle"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextPassword"
            app:layout_constraintVertical_bias="0.5"/>

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/editTextStyle"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            app:layout_constraintBottom_toTopOf="@id/buttonLogin"
            app:layout_constraintVertical_bias="0.5"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_button"
            android:textColor="@color/black"
            android:background="@drawable/main_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintVertical_bias="0.5"/>

        <Button
            android:id="@+id/buttonNoAccount"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/no_account"
            android:textColor="@color/black"
            android:background="@drawable/second_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin"
            app:layout_constraintVertical_bias="0.5"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>